--- a/myweb/pom.xml
+++ b/myweb/pom.xml
@@ -29,9 +29,8 @@
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.2</version>
             <configuration>
-                <path>/${finalName}</path>
-                <update>ture</update>
                 <url>http://localhost:8080/manager/text</url>
+                <path>/{finalName}</path>
                 <username>tomcat</username>
                 <password>tomcat</password>
             </configuration>
