--- a/myweb/pom.xml
+++ b/myweb/pom.xml
@@ -30,7 +30,7 @@
             <version>2.2</version>
             <configuration>
                 <url>http://localhost:8080/manager/text</url>
-                <path>/{finalName}</path>
+                <path>/myweb</path>
                 <username>tomcat</username>
                 <password>tomcat</password>
             </configuration>
