--- a/hello1/pom.xml
+++ b/hello1/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>hello</groupId>
-  <artifactId>myweb</artifactId>
+  <groupId>my</groupId>
+  <artifactId>hello1</artifactId>
   <packaging>war</packaging>
   <version>0.1</version>
-  <name>world Maven Webapp</name>
+  <name>hello1 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -20,9 +20,14 @@
         <version>2.5</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>4.3.1.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
-    <finalName>myweb</finalName>
+    <finalName>hello1</finalName>
     <plugins>
         <plugin>
             <groupId>org.apache.tomcat.maven</groupId>
