--- a/hello1/src/main/webapp/WEB-INF/web.xml
+++ b/hello1/src/main/webapp/WEB-INF/web.xml
@@ -12,12 +12,6 @@
 
   <servlet-mapping>
     <servlet-name>springapp</servlet-name>
-    <url-pattern>*.htm</url-pattern>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
-
-  <welcome-file-list>
-    <welcome-file>
-      index.jsp
-    </welcome-file>
-  </welcome-file-list>
 </web-app>
