--- a/hello1/pom.xml
+++ b/hello1/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>spring-webmvc</artifactId>
       <version>4.3.1.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>1.1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>hello1</finalName>
